--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ h1{margin:0 0 10px;font-size:48px;line-height:1.1}
         <a href="#como-funciona">Como funciona</a>
         <a href="#funcionalidades">Funcionalidades</a>
         <a href="#planos">Planos</a>
-        <a href="#contato" class="btn primary">Quero pilotar</a>
+        <a href="#contato" class="btn primary">Quero testar</a>
       </div>
     </div>
   </nav>
@@ -78,7 +78,7 @@ h1{margin:0 0 10px;font-size:48px;line-height:1.1}
       <div class="grid-3">
         <div class="card"><h3>1. Cadastro</h3><p>Candidatos realizam testes vocacionais e empresas publicam suas vagas em minutos.</p></div>
         <div class="card"><h3>2. Matching</h3><p>Like/dislike dos dois lados + indicações por compatibilidade de perfil e competências.</p></div>
-        <div class="card"><h3>3. Evolução</h3><p>Trilhas de capacitação e apoio Bem+ para reduzir abandono e aumentar performance.</p></div>
+        <div class="card"><h3>3. Evolução</h3><p>Trilhas de capacitação e apoio Bem+Match para reduzir abandono e aumentar performance.</p></div>
       </div>
     </div>
   </section>
@@ -89,7 +89,7 @@ h1{margin:0 0 10px;font-size:48px;line-height:1.1}
       <div class="grid-2">
         <div class="card"><h3>Banco de Talentos</h3><p>Busca ágil, matching inteligente e candidatos qualificados.</p></div>
         <div class="card"><h3>Capacitação</h3><p>Trilhas de aprendizagem e cursos parceiros para desenvolver competências.</p></div>
-        <div class="card"><h3>Bem+</h3><p>Apoio emocional, conteúdos e grupos para melhorar retenção e engajamento.</p></div>
+        <div class="card"><h3>Bem+Match</h3><p>Apoio emocional, conteúdos e grupos para melhorar retenção e engajamento.</p></div>
         <div class="card"><h3>Relatórios</h3><p>Métricas de inclusão e impacto social para empresas e parceiros.</p></div>
       </div>
     </div>
