--- a/index.html
+++ b/index.html
@@ -3,136 +3,266 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>MatchWork — Conectando talentos e empresas</title>
 <meta name="description" content="MatchWork: plataforma moderna de empregabilidade que conecta candidatos e empresas, com matching rápido, trilhas de capacitação e apoio emocional (Bem+).">
+<link rel="icon" href="assets/logo.png" type="image/png">
+<link rel="canonical" href="https://rodrigovolpatob-blip.github.io/MatchWork/">
+
+<!-- Open Graph / Social -->
+<meta property="og:title" content="MatchWork — Conectando talentos e empresas">
+<meta property="og:description" content="Matching rápido, trilhas de capacitação e Bem+ para reduzir rotatividade.">
+<meta property="og:image" content="assets/logo.png">
+<meta property="og:type" content="website">
 <meta name="theme-color" content="#6f3aff">
+
 <style>
 :root{
-  --bg: #ffffff;
-  --ink: #111111;
+  --bg:#ffffff;
+  --ink:#111111;
   --muted:#666666;
-  --line: #e5e5e5;
-  --brand:#6f3aff;
-  --brand-2:#9b6dff;
+  --line:#e5e5e5;
+  --brand:#6f3aff;   /* Roxo MatchWork */
+  --brand-2:#9b6dff; /* Hover/variação clara */
 }
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);
-  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
-a{text-decoration:none;color:var(--brand)}
-.container{max-width:1160px;margin:0 auto;padding:0 24px}
-.nav{position:sticky;top:0;z-index:40;background:#fff;border-bottom:1px solid var(--line)}
-.nav-inner{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
-.brand img{height:40px;display:block}
-.nav .links a{margin-left:18px;font-weight:600;color:var(--ink);opacity:.9}
-.btn{display:inline-block;padding:12px 18px;border-radius:10px;font-weight:700;border:2px solid var(--brand);transition:.2s}
-.btn.primary{background:var(--brand);color:#fff}
-.btn.primary:hover{background:var(--brand-2)}
-.btn.ghost{background:#fff;color:var(--brand)}
-.hero{padding:84px 0 54px;text-align:center}
-h1{margin:0 0 10px;font-size:48px;line-height:1.1}
-.lead{color:var(--muted);font-size:20px;margin:0 0 18px;max-width:740px;margin-left:auto;margin-right:auto}
-.section{padding:64px 0;border-top:1px solid var(--line)}
-.section h2{font-size:32px;margin:0 0 10px;text-align:center;color:var(--brand)}
-.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-top:24px}
-.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:20px;margin-top:24px}
-.card{padding:24px;border-radius:14px;border:1px solid var(--line);background:#fafafa;text-align:center;transition:.2s}
-.card:hover{box-shadow:0 4px 18px rgba(0,0,0,.08);transform:translateY(-2px)}
-.pricing{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:32px}
-.price-card{padding:28px;border-radius:16px;border:1px solid var(--line);background:#fafafa;display:flex;flex-direction:column;gap:10px;text-align:center;transition:0.2s}
-.price-card:hover{box-shadow:0 4px 20px rgba(0,0,0,.08);transform:translateY(-2px)}
-.price{display:flex;align-items:baseline;justify-content:center;gap:6px}
-.amount{font-size:40px;font-weight:900;color:var(--brand)}
-.small{color:var(--muted);font-size:14px}
-.footer{padding:28px 0;color:var(--muted);border-top:1px solid var(--line);text-align:center;margin-top:40px;font-size:14px}
+html{scroll-behavior:smooth}
+body{
+  margin:0; padding:0; background:var(--bg); color:var(--ink);
+  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif
+}
+a{ text-decoration:none; color:var(--brand) }
+a:focus, button:focus, input:focus, select:focus, textarea:focus{
+  outline:2px solid var(--brand-2); outline-offset:2px
+}
+.container{ max-width:1160px; margin:0 auto; padding:0 24px }
+
+/* NAV */
+.nav{
+  position:sticky; top:0; z-index:40; background:#fff; border-bottom:1px solid var(--line)
+}
+.nav-inner{
+  display:flex; align-items:center; justify-content:space-between; padding:14px 0
+}
+.brand img{ height:44px; display:block }
+.nav .links a{
+  margin-left:18px; font-weight:600; color:var(--ink); opacity:.9; transition:.15s ease
+}
+.nav .links a:hover{ color:var(--brand) }
+
+/* Buttons */
+.btn{
+  display:inline-block; padding:12px 18px; border-radius:10px; font-weight:700;
+  border:2px solid var(--brand); transition:.2s
+}
+.btn.primary{ background:var(--brand); color:#fff }
+.btn.primary:hover{ background:var(--brand-2); border-color:var(--brand-2) }
+.btn.ghost{ background:#fff; color:var(--brand) }
+.btn.ghost:hover{ background:#f7f4ff }
+
+/* HERO */
+.hero{ padding:84px 0 54px; text-align:center }
+h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
+.lead{
+  color:var(--muted); font-size:20px; margin:0 0 18px; max-width:740px; margin-left:auto; margin-right:auto
+}
+
+/* SEÇÕES */
+.section{ padding:72px 0; border-top:1px solid var(--line) }
+.section h2{
+  font-size:32px; margin:0 0 16px; text-align:center; color:var(--brand); letter-spacing:-.2px
+}
+
+/* GRIDS & CARDS */
+.grid-3{ display:grid; grid-template-columns:repeat(3,1fr); gap:20px; margin-top:24px }
+.grid-2{ display:grid; grid-template-columns:repeat(2,1fr); gap:20px; margin-top:24px }
+.card{
+  padding:24px; border-radius:14px; border:1px solid var(--line); background:#fafafa;
+  text-align:center; transition:.2s; box-shadow:0 2px 10px rgba(0,0,0,.03)
+}
+.card:hover{ box-shadow:0 6px 24px rgba(0,0,0,.08); transform:translateY(-2px) }
+
+/* PRICING */
+.pricing{ display:grid; grid-template-columns:repeat(3,1fr); gap:16px; margin-top:32px }
+.price-card{
+  padding:28px; border-radius:16px; border:1px solid var(--line); background:#fafafa;
+  display:flex; flex-direction:column; gap:10px; text-align:center; transition:.2s;
+  box-shadow:0 2px 10px rgba(0,0,0,.03)
+}
+.price-card:hover{ box-shadow:0 8px 26px rgba(0,0,0,.10); transform:translateY(-2px) }
+.price{ display:flex; align-items:baseline; justify-content:center; gap:6px }
+.amount{ font-size:40px; font-weight:900; color:var(--brand) }
+.small{ color:var(--muted); font-size:14px }
+
+/* FORM */
+.form{
+  max-width:640px; margin:16px auto; display:grid; gap:12px
+}
+.input{
+  padding:12px; border:1px solid var(--line); border-radius:8px; font-size:16px
+}
+.input::placeholder{ color:#8a8a8a }
+
+/* FOOTER */
+.footer{
+  padding:28px 0; color:var(--muted); border-top:1px solid var(--line);
+  text-align:center; margin-top:40px; font-size:14px
+}
+
+/* RESPONSIVO */
 @media (max-width: 980px){
-  .grid-3,.grid-2,.pricing{grid-template-columns:1fr}
-  h1{font-size:36px}
+  .grid-3, .grid-2, .pricing{ grid-template-columns:1fr }
+  h1{ font-size:36px }
+  .brand img{ height:40px }
 }
 </style>
 </head>
 <body>
-  <nav class="nav">
+  <!-- Navegação -->
+  <nav class="nav" role="navigation" aria-label="principal">
     <div class="container nav-inner">
-      <div class="brand"><img src="https://via.placeholder.com/160x40?text=MatchWork" alt="Logo MatchWork"/></div>
-      <div class="links">
+      <a class="brand" href="#" aria-label="MatchWork">
+        <img src="assets/logo.png" alt="Logo MatchWork" loading="lazy" decoding="async">
+      </a>
+      <div class="links" aria-label="links principais">
         <a href="#como-funciona">Como funciona</a>
         <a href="#funcionalidades">Funcionalidades</a>
         <a href="#planos">Planos</a>
-        <a href="#contato" class="btn primary">Quero testar</a>
+        <a href="#contato" class="btn primary">Fale com a gente</a>
       </div>
     </div>
   </nav>
 
+  <!-- Hero -->
   <header class="container hero">
-    <h1>Conectando talentos<br/>e empresas de forma simples</h1>
-    <p class="lead">O <b>MatchWork</b> oferece um processo rápido e inteligente de recrutamento, unindo matching, capacitação e apoio emocional (Bem+). Tudo para gerar contratações ágeis e retenção de talentos.</p>
+    <h1>Conectando talentos<br>e empresas de forma simples</h1>
+    <p class="lead">
+      O <b>MatchWork</b> oferece um processo rápido e inteligente de recrutamento, unindo
+      matching, trilhas de capacitação e apoio emocional (<b>Bem+</b>). Tudo para gerar
+      contratações ágeis e <b>retenção</b> de talentos.
+    </p>
     <div style="margin-top:20px">
-      <a class="btn primary" href="#planos">Ver planos</a>
-      <a class="btn ghost" href="#impacto">Ver impacto</a>
+      <a class="btn primary" href="#planos" aria-label="Ver planos">Ver planos</a>
+      <a class="btn ghost" href="#impacto" aria-label="Ver impacto">Ver impacto</a>
     </div>
   </header>
 
-  <section id="como-funciona" class="section">
+  <!-- Como funciona -->
+  <section id="como-funciona" class="section" aria-labelledby="como-funciona-title">
     <div class="container">
-      <h2>Como funciona</h2>
+      <h2 id="como-funciona-title">Como funciona</h2>
       <div class="grid-3">
-        <div class="card"><h3>1. Cadastro</h3><p>Candidatos realizam testes vocacionais e empresas publicam suas vagas em minutos.</p></div>
-        <div class="card"><h3>2. Matching</h3><p>Like/dislike dos dois lados + indicações por compatibilidade de perfil e competências.</p></div>
-        <div class="card"><h3>3. Evolução</h3><p>Trilhas de capacitação e apoio Bem+Match para reduzir abandono e aumentar performance.</p></div>
+        <div class="card" role="article">
+          <h3>1. Cadastro</h3>
+          <p>Candidatos realizam testes vocacionais e empresas publicam suas vagas em minutos.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>2. Matching</h3>
+          <p>Like/dislike dos dois lados + indicações por compatibilidade de perfil e competências.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>3. Evolução</h3>
+          <p>Trilhas de capacitação e <b>Bem+</b> para reduzir abandono e aumentar performance.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="funcionalidades" class="section">
+  <!-- Funcionalidades -->
+  <section id="funcionalidades" class="section" aria-labelledby="funcionalidades-title">
     <div class="container">
-      <h2>Funcionalidades</h2>
+      <h2 id="funcionalidades-title">Funcionalidades</h2>
       <div class="grid-2">
-        <div class="card"><h3>Banco de Talentos</h3><p>Busca ágil, matching inteligente e candidatos qualificados.</p></div>
-        <div class="card"><h3>Capacitação</h3><p>Trilhas de aprendizagem e cursos parceiros para desenvolver competências.</p></div>
-        <div class="card"><h3>Bem+Match</h3><p>Apoio emocional, conteúdos e grupos para melhorar retenção e engajamento.</p></div>
-        <div class="card"><h3>Relatórios</h3><p>Métricas de inclusão e impacto social para empresas e parceiros.</p></div>
+        <div class="card" role="article">
+          <h3>Banco de Talentos</h3>
+          <p>Busca ágil, matching inteligente e candidatos qualificados.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Capacitação</h3>
+          <p>Trilhas de aprendizagem e cursos parceiros para desenvolver competências.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Bem+</h3>
+          <p>Apoio emocional, conteúdos e grupos para melhorar retenção e engajamento.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Relatórios</h3>
+          <p>Métricas de inclusão e impacto social para empresas e parceiros.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="planos" class="section">
+  <!-- Planos -->
+  <section id="planos" class="section" aria-labelledby="planos-title">
     <div class="container">
-      <h2>Nossos Planos</h2>
+      <h2 id="planos-title">Nossos Planos</h2>
       <div class="pricing">
-        <div class="price-card">
+        <div class="price-card" role="article" aria-label="Plano PMEs Assinatura">
           <h3>PMEs — Assinatura</h3>
           <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
-          <p>Publicações ilimitadas<br/>Banco de talentos<br/>Networking empresarial</p>
-          <a class="btn primary" href="#contato">Assinar</a>
+          <p>Publicações ilimitadas<br>Banco de talentos<br>Networking empresarial</p>
+          <a class="btn primary" href="#contato" aria-label="Assinar plano PMEs">Assinar</a>
         </div>
-        <div class="price-card">
+        <div class="price-card" role="article" aria-label="Plano PMEs One-Shot">
           <h3>PMEs — One-Shot</h3>
           <div class="price"><span class="amount">R$400</span><span class="small">/vaga</span></div>
-          <p>Publicação avulsa até preencher<br/>Indicação de perfis compatíveis</p>
-          <a class="btn primary" href="#contato">Publicar vaga</a>
+          <p>Publicação avulsa até preencher<br>Indicação de perfis compatíveis</p>
+          <a class="btn primary" href="#contato" aria-label="Publicar vaga one-shot">Publicar vaga</a>
         </div>
-        <div class="price-card">
+        <div class="price-card" role="article" aria-label="Plano Candidatos Premium">
           <h3>Candidatos — Premium</h3>
           <div class="price"><span class="amount">R$14,90</span><span class="small">/mês</span></div>
-          <p>Destaque + relatório de carreira<br/>Acesso ao Bem+<br/>Trilhas e feedback contínuo</p>
-          <a class="btn primary" href="#contato">Ser Premium</a>
+          <p>Destaque + relatório de carreira<br>Acesso ao Bem+<br>Trilhas e feedback contínuo</p>
+          <a class="btn primary" href="#contato" aria-label="Assinar Premium">Ser Premium</a>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="impacto" class="section">
+  <!-- Impacto -->
+  <section id="impacto" class="section" aria-labelledby="impacto-title">
     <div class="container">
-      <h2>Impacto</h2>
+      <h2 id="impacto-title">Impacto</h2>
       <div class="grid-3">
-        <div class="card"><h3>Contratação ágil</h3><p>Processo simplificado reduz tempo médio de contratação.</p></div>
-        <div class="card"><h3>Maior retenção</h3><p>Capacitação contínua + apoio Bem+ reduzem a rotatividade.</p></div>
-        <div class="card"><h3>Inclusão</h3><p>Relatórios sobre diversidade e empregabilidade para reforçar práticas ESG.</p></div>
+        <div class="card" role="article">
+          <h3>Contratação ágil</h3>
+          <p>Processo simplificado reduz tempo médio de contratação.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Maior retenção</h3>
+          <p>Capacitação contínua + <b>Bem+</b> reduzem a rotatividade.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Inclusão</h3>
+          <p>Relatórios sobre diversidade e empregabilidade para reforçar práticas ESG.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <footer class="footer">
+  <!-- Contato -->
+  <section id="contato" class="section" aria-labelledby="contato-title">
+    <div class="container">
+      <h2 id="contato-title" style="text-align:center;color:#6F3AFF">Fale com a gente</h2>
+      <!-- Honeypot anti-spam: o campo "empresa" não deve ser preenchido por humanos -->
+      <form action="https://formspree.io/f/mayvlqkp" method="POST" class="form" aria-label="Formulário de contato">
+        <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
+        <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
+        <select class="input" name="perfil" required aria-label="Seu perfil">
+          <option value="" disabled selected>Sou...</option>
+          <option value="pme">PME</option>
+          <option value="candidato">Candidato</option>
+          <option value="organizacao">Organização/Parceria</option>
+        </select>
+        <textarea class="input" name="mensagem" rows="4" placeholder="Como podemos ajudar?" required aria-label="Sua mensagem"></textarea>
+        <input type="text" name="empresa" style="display:none">
+        <button class="btn primary" type="submit" style="width:max-content">Enviar</button>
+      </form>
+    </div>
+  </section>
+
+  <footer class="footer" role="contentinfo">
     <div class="container">© 2025 MatchWork — Transformando o mercado de trabalho.</div>
   </footer>
 </body>
