--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title>MatchWork — Conectando talentos e empresas</title>
-<meta name="description" content="MatchWork: plataforma moderna de empregabilidade que conecta candidatos e empresas, com matching rápido, trilhas de capacitação e apoio emocional (Bem+).">
-<link rel="icon" href="assets/logo.png" type="image/png">
+<meta name="description" content="MatchWork conecta candidatos e empresas com matching rápido, trilhas de capacitação, apoio emocional (Bem+) e soluções para reduzir rotatividade.">
+<link rel="icon" href="assets/logo-purple.png" type="image/png">
 <link rel="canonical" href="https://rodrigovolpatob-blip.github.io/MatchWork/">
-
-<!-- Open Graph / Social -->
 <meta property="og:title" content="MatchWork — Conectando talentos e empresas">
 <meta property="og:description" content="Matching rápido, trilhas de capacitação e Bem+ para reduzir rotatividade.">
-<meta property="og:image" content="assets/logo.png">
+<meta property="og:image" content="assets/logo-purple.png">
 <meta property="og:type" content="website">
 <meta name="theme-color" content="#6f3aff">
 
@@ -21,9 +18,10 @@
   --bg:#ffffff;
   --ink:#111111;
   --muted:#666666;
-  --line:#e5e5e5;
+  --line:#eaeaea;
   --brand:#6f3aff;   /* Roxo MatchWork */
   --brand-2:#9b6dff; /* Hover/variação clara */
+  --paper:#fafafa;
 }
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
@@ -44,7 +42,7 @@ a:focus, button:focus, input:focus, select:focus, textarea:focus{
 .nav-inner{
   display:flex; align-items:center; justify-content:space-between; padding:14px 0
 }
-.brand img{ height:44px; display:block }
+.brand img{ height:64px; display:block }          /* ↑ aumentei a logo */
 .nav .links a{
   margin-left:18px; font-weight:600; color:var(--ink); opacity:.9; transition:.15s ease
 }
@@ -58,13 +56,44 @@ a:focus, button:focus, input:focus, select:focus, textarea:focus{
 .btn.primary{ background:var(--brand); color:#fff }
 .btn.primary:hover{ background:var(--brand-2); border-color:var(--brand-2) }
 .btn.ghost{ background:#fff; color:var(--brand) }
-.btn.ghost:hover{ background:#f7f4ff }
+.btn.ghost:hover{ background:#f4f0ff }
 
 /* HERO */
-.hero{ padding:84px 0 54px; text-align:center }
-h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
+.hero{
+  padding:72px 0 48px;
+  background:
+    radial-gradient(1200px 400px at 50% -200px, rgba(111,58,255,.12), transparent 60%),
+    linear-gradient(#fff, #fff);
+}
+.hero-grid{
+  display:grid; grid-template-columns:1.05fr 1fr; gap:28px; align-items:center
+}
+h1{ margin:0 0 12px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
 .lead{
-  color:var(--muted); font-size:20px; margin:0 0 18px; max-width:740px; margin-left:auto; margin-right:auto
+  color:var(--muted); font-size:20px; margin:0 0 20px; max-width:720px
+}
+
+/* MOCKUP */
+.mock{
+  border:1px solid var(--line); border-radius:16px; background:var(--paper);
+  box-shadow:0 12px 40px rgba(0,0,0,.08); padding:18px
+}
+.mock .bar{
+  height:10px; background:linear-gradient(90deg,#e5e1ff,#f2efff); border-radius:8px; margin-bottom:14px
+}
+.mock .screen{
+  background:#fff; border:1px solid var(--line); border-radius:12px; padding:16px;
+}
+.mock .cards{
+  display:grid; grid-template-columns:1fr 1fr; gap:12px
+}
+.mock .card{
+  border:1px solid var(--line); border-radius:10px; padding:12px; background:#fff;
+  box-shadow:0 2px 8px rgba(0,0,0,.04)
+}
+.badge{
+  display:inline-block; padding:4px 8px; font-size:12px; border-radius:999px;
+  background:#f4f0ff; color:#4b27c9; border:1px solid #e5ddff; font-weight:700
 }
 
 /* SEÇÕES */
@@ -72,12 +101,10 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
 .section h2{
   font-size:32px; margin:0 0 16px; text-align:center; color:var(--brand); letter-spacing:-.2px
 }
-
-/* GRIDS & CARDS */
 .grid-3{ display:grid; grid-template-columns:repeat(3,1fr); gap:20px; margin-top:24px }
 .grid-2{ display:grid; grid-template-columns:repeat(2,1fr); gap:20px; margin-top:24px }
 .card{
-  padding:24px; border-radius:14px; border:1px solid var(--line); background:#fafafa;
+  padding:24px; border-radius:14px; border:1px solid var(--line); background:var(--paper);
   text-align:center; transition:.2s; box-shadow:0 2px 10px rgba(0,0,0,.03)
 }
 .card:hover{ box-shadow:0 6px 24px rgba(0,0,0,.08); transform:translateY(-2px) }
@@ -85,7 +112,7 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
 /* PRICING */
 .pricing{ display:grid; grid-template-columns:repeat(3,1fr); gap:16px; margin-top:32px }
 .price-card{
-  padding:28px; border-radius:16px; border:1px solid var(--line); background:#fafafa;
+  padding:28px; border-radius:16px; border:1px solid var(--line); background:var(--paper);
   display:flex; flex-direction:column; gap:10px; text-align:center; transition:.2s;
   box-shadow:0 2px 10px rgba(0,0,0,.03)
 }
@@ -95,11 +122,9 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
 .small{ color:var(--muted); font-size:14px }
 
 /* FORM */
-.form{
-  max-width:640px; margin:16px auto; display:grid; gap:12px
-}
+.form{ max-width:640px; margin:16px auto; display:grid; gap:12px }
 .input{
-  padding:12px; border:1px solid var(--line); border-radius:8px; font-size:16px
+  padding:12px; border:1px solid var(--line); border-radius:8px; font-size:16px; background:#fff
 }
 .input::placeholder{ color:#8a8a8a }
 
@@ -111,9 +136,10 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
 
 /* RESPONSIVO */
 @media (max-width: 980px){
+  .hero-grid{ grid-template-columns:1fr }
   .grid-3, .grid-2, .pricing{ grid-template-columns:1fr }
   h1{ font-size:36px }
-  .brand img{ height:40px }
+  .brand img{ height:56px }
 }
 </style>
 </head>
@@ -122,7 +148,8 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
   <nav class="nav" role="navigation" aria-label="principal">
     <div class="container nav-inner">
       <a class="brand" href="#" aria-label="MatchWork">
-        <img src="assets/logo.png" alt="Logo MatchWork" loading="lazy" decoding="async">
+        <!-- Use a logo roxa aqui -->
+        <img src="assets/logo-purple.png" alt="Logo MatchWork" loading="lazy" decoding="async">
       </a>
       <div class="links" aria-label="links principais">
         <a href="#como-funciona">Como funciona</a>
@@ -133,17 +160,57 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
     </div>
   </nav>
 
-  <!-- Hero -->
-  <header class="container hero">
-    <h1>Conectando talentos<br>e empresas de forma simples</h1>
-    <p class="lead">
-      O <b>MatchWork</b> oferece um processo rápido e inteligente de recrutamento, unindo
-      matching, trilhas de capacitação e apoio emocional (<b>Bem+</b>). Tudo para gerar
-      contratações ágeis e <b>retenção</b> de talentos.
-    </p>
-    <div style="margin-top:20px">
-      <a class="btn primary" href="#planos" aria-label="Ver planos">Ver planos</a>
-      <a class="btn ghost" href="#impacto" aria-label="Ver impacto">Ver impacto</a>
+  <!-- Hero com mockup -->
+  <header class="section hero">
+    <div class="container hero-grid">
+      <div>
+        <span class="badge">Empregos • Capacitação • Bem+ • Retenção</span>
+        <h1>Conectando talentos e empresas<br>com foco em retenção</h1>
+        <p class="lead">
+          O <b>MatchWork</b> une matching tipo like/dislike, trilhas de capacitação e apoio emocional (<b>Bem+</b>).
+          Para empresas, o resultado é <b>contratar mais rápido</b> e <b>reter por mais tempo</b>.
+        </p>
+        <div style="margin-top:18px">
+          <a class="btn primary" href="#planos" aria-label="Ver planos">Ver planos</a>
+          <a class="btn ghost" href="#palestras" aria-label="Palestras e consultoria">Palestras & Consultoria</a>
+        </div>
+      </div>
+
+      <!-- MOCKUP: “tela” do produto dentro de um device genérico -->
+      <div class="mock" aria-hidden="true">
+        <div class="bar"></div>
+        <div class="screen">
+          <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
+            <div style="font-weight:800;color:#333">Painel MatchWork</div>
+            <div class="badge">Demo</div>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <div style="height:8px;background:#6f3aff20;border-radius:999px;margin-bottom:8px"></div>
+              <div style="height:8px;background:#6f3aff30;border-radius:999px;width:70%;margin-bottom:10px"></div>
+              <div style="font-size:12px;color:#666">Candidatos compatíveis</div>
+            </div>
+            <div class="card">
+              <div style="display:flex;gap:8px;align-items:center;margin-bottom:8px">
+                <div style="width:10px;height:10px;background:#6f3aff;border-radius:2px"></div>
+                <div style="width:10px;height:10px;background:#9b6dff;border-radius:2px"></div>
+                <div style="width:10px;height:10px;background:#d2c5ff;border-radius:2px"></div>
+              </div>
+              <div style="height:8px;background:#6f3aff30;border-radius:999px;width:60%;margin-bottom:10px"></div>
+              <div style="font-size:12px;color:#666">Trilhas & progresso</div>
+            </div>
+            <div class="card">
+              <div style="height:56px;background:linear-gradient(90deg,#f2efff,#ffffff);border:1px dashed #dfd7ff;border-radius:8px;margin-bottom:8px"></div>
+              <div style="font-size:12px;color:#666">Bem+ (apoio emocional)</div>
+            </div>
+            <div class="card">
+              <div style="height:8px;background:#6f3aff20;border-radius:999px;margin-bottom:8px"></div>
+              <div style="height:8px;background:#6f3aff30;border-radius:999px;width:50%;margin-bottom:10px"></div>
+              <div style="font-size:12px;color:#666">Relatórios & inclusão</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 
@@ -154,11 +221,11 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
       <div class="grid-3">
         <div class="card" role="article">
           <h3>1. Cadastro</h3>
-          <p>Candidatos realizam testes vocacionais e empresas publicam suas vagas em minutos.</p>
+          <p>Candidatos fazem testes vocacionais/comportamentais; empresas publicam vagas em minutos.</p>
         </div>
         <div class="card" role="article">
           <h3>2. Matching</h3>
-          <p>Like/dislike dos dois lados + indicações por compatibilidade de perfil e competências.</p>
+          <p>Like/dislike dos dois lados + recomendações por compatibilidade e competências.</p>
         </div>
         <div class="card" role="article">
           <h3>3. Evolução</h3>
@@ -179,7 +246,7 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
         </div>
         <div class="card" role="article">
           <h3>Capacitação</h3>
-          <p>Trilhas de aprendizagem e cursos parceiros para desenvolver competências.</p>
+          <p>Trilhas de aprendizagem e cursos parceiros por cargo/competência.</p>
         </div>
         <div class="card" role="article">
           <h3>Bem+</h3>
@@ -187,8 +254,32 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
         </div>
         <div class="card" role="article">
           <h3>Relatórios</h3>
-          <p>Métricas de inclusão e impacto social para empresas e parceiros.</p>
+          <p>Métricas de inclusão e empregabilidade (ESG) para decisões claras.</p>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- NOVA: Palestras & Consultoria para empresas -->
+  <section id="palestras" class="section" aria-labelledby="palestras-title" style="background:#fff">
+    <div class="container">
+      <h2 id="palestras-title">Palestras & Consultoria para Empresas</h2>
+      <div class="grid-3">
+        <div class="card" role="article">
+          <h3>Onboarding que retém</h3>
+          <p>Boas práticas para os 90 primeiros dias, com materiais prontos e treinamentos curtos.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Liderança de primeira linha</h3>
+          <p>Workshops para líderes/encarregados: feedback, clima, prevenção de rotatividade.</p>
+        </div>
+        <div class="card" role="article">
+          <h3>Programas de inclusão</h3>
+          <p>Trilhas rápidas para empregar jovens, mulheres e PCDs, conectadas ao MatchWork.</p>
+        </div>
+      </div>
+      <div style="text-align:center;margin-top:18px">
+        <a class="btn primary" href="#contato">Quero uma proposta</a>
       </div>
     </div>
   </section>
@@ -245,7 +336,6 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
   <section id="contato" class="section" aria-labelledby="contato-title">
     <div class="container">
       <h2 id="contato-title" style="text-align:center;color:#6F3AFF">Fale com a gente</h2>
-      <!-- Honeypot anti-spam: o campo "empresa" não deve ser preenchido por humanos -->
       <form action="https://formspree.io/f/mayvlqkp" method="POST" class="form" aria-label="Formulário de contato">
         <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
         <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
@@ -256,7 +346,7 @@ h1{ margin:0 0 10px; font-size:48px; line-height:1.1; letter-spacing:-.2px }
           <option value="organizacao">Organização/Parceria</option>
         </select>
         <textarea class="input" name="mensagem" rows="4" placeholder="Como podemos ajudar?" required aria-label="Sua mensagem"></textarea>
-        <input type="text" name="empresa" style="display:none">
+        <input type="text" name="empresa" style="display:none"> <!-- honeypot anti-spam -->
         <button class="btn primary" type="submit" style="width:max-content">Enviar</button>
       </form>
     </div>
